# android-computer-vision

./: .gitignore  README.md  import-summary.txt  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/mgo/computervision/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  format_image.cpp  format_image.h  native_cv.cpp  process_image.cpp  process_image.h
app/src/main/java/com/mgo/computervision/: ActivityExtensions.kt  AutoFitTextureView.kt  Camera2ProcessFragment.kt  CameraActivity.kt  CompareSizesByArea.kt  ConfirmationDialog.kt  Constants.kt  ErrorDialog.kt  ImageSaver.kt  PreviousMainActivity.kt
app/src/main/res/layout/: activity_camera.xml  fragment_camera2_basic.xml  previous_activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/mgo/computervision/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
